docs/7.52/md/abenexceptions_events.md
---
title: "Class-Based Exceptions in Event Handlers"
description: |
  Class-based exceptions in event handlers(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenevent_handler_glosry.htm 'Glossary Entry') are a special case of class-based exceptions in procedures(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenexceptions_procedures.htm).
version: "7.52"
category: "oop"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenexceptions_events.htm"
abapFile: "abenexceptions_events.htm"
keywords: ["do", "if", "case", "try", "method", "class", "exception-handling", "abenexceptions", "events"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Program Flow Logic](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_flow_logic.htm) →  [Exception Handling](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_exceptions.htm) →  [Class-Based Exceptions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenexceptions.htm) →  [System Response After a Class-Based Exception](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenexceptions_system_response.htm) → 

Class-Based Exceptions in Event Handlers

Class-based exceptions in [event handlers](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenevent_handler_glosry.htm "Glossary Entry") are a special case of [class-based exceptions in procedures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenexceptions_procedures.htm).

Since event handlers and triggers are completely detached, the trigger of an event does not know the handler and therefore cannot handle its exceptions. For this reason, no class-based exceptions can be declared using RAISING in the [declaration](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmethods_event_handler.htm).

This has the following consequences:

-   If exceptions from the CX\_STATIC\_CHECK or CX\_DYNAMIC\_CHECK classes occur during event handling, they must be handled in the event handler or they lead to a violation of the interface, whereby for normal [procedures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenexceptions_procedures.htm) the CX\_SY\_NO\_HANDLER exception is triggered.

-   If a violation of the interface occurs during event handling, event handling is terminated and the control is given back to the trigger of the event. Further event handlers which are still registered for the event are not executed.

-   The trigger of the event can handle the CX\_SY\_NO\_HANDLER exception.

Notes

-   An event handler must handle exceptions of the classes CX\_STATIC\_CHECK and CX\_DYNAMIC\_CHECK that are raised during processing. If they are not handled and this leads to a violation of the interface, it is seen as a programming error in the event handling.

-   The trigger of an event does not usually have to handle exceptions, unless an exception to the class CX\_NO\_CHECK is expected. The handling of CX\_SY\_NO\_HANDLER is only considered when trying to prevent a possible programming error in an event handler from producing a runtime error.

-   The trigger of an event should not attempt, any more than the caller of a procedure, to handle the original exception after detecting CX\_SY\_NO\_HANDLER. Unlike for the direct method call, it is not yet determined here which method the event has handled.